--- a/Firmware/prj.conf
+++ b/Firmware/prj.conf
@@ -19,15 +19,15 @@ CONFIG_BOARD_ENABLE_DCDC_HV=n
 # Use internal 32k RC oscillator
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
-CONFIG_GPIO=y
+CONFIG_GPIO=n
 
-CONFIG_SENSOR=y
-CONFIG_BNO08X=y
-CONFIG_PIPES=y
+CONFIG_SENSOR=y         # for testing on DK make this n
+CONFIG_BNO08X=y         # for testing on DK make this n
+CONFIG_PIPES=y          # for testing on DK make this n
 
 # Audio
-CONFIG_AUDIO=y
-CONFIG_AUDIO_DMIC=y
+CONFIG_AUDIO=y          # for testing on DK make this n
+CONFIG_AUDIO_DMIC=y     # for testing on DK make this n
 CONFIG_AUDIO_DMIC_LOG_LEVEL_DBG=n
 
 # Make sure printk is printing to the UART console
@@ -66,6 +66,10 @@ CONFIG_BT_GATT_CLIENT=y
 # CONFIG_BT_L2CAP_DYNAMIC_CHANNEL=y
 # CONFIG_BT_CONN_TX_MAX=10
 # CONFIG_BT_BUF_ACL_TX_COUNT=10
+
+# BLE Battery Service
+CONFIG_BT_BAS=y
+CONFIG_BT_BAS_LOG_LEVEL_DBG=y
 
 
 CONFIG_BT_ATT_PREPARE_COUNT=4
@@ -116,9 +120,42 @@ CONFIG_LOG_PRINTK=y
 
 CONFIG_ASSERT=y
 
+# ──────────────────────────────────────────────────────────────
+# – secure boot & mcumgr OTA over BLE
+# ──────────────────────────────────────────────────────────────
+# Build MCUboot as the 1st-stage bootloader
+CONFIG_BOOTLOADER_MCUBOOT=y
 
-# Enable FOTA
-# CONFIG_NCS_SAMPLE_MCUMGR_BT_OTA_DFU=y
-# CONFIG_BOOTLOADER_MCUBOOT=y
-# CONFIG_NRF53_UPGRADE_NETWORK_CORE=y
-# CONFIG_ADD_MCUBOOT_MEDIATE_SIM_FLASH_DTS=y
+
+CONFIG_NCS_SAMPLE_MCUMGR_BT_OTA_DFU=y
+
+# mcumgr core and commands
+CONFIG_MCUMGR=y
+CONFIG_NET_BUF=y
+CONFIG_ZCBOR=y
+CONFIG_CRC=y
+CONFIG_STREAM_FLASH=y
+CONFIG_IMG_MANAGER=y
+CONFIG_MCUMGR_GRP_IMG=y
+CONFIG_MCUMGR_GRP_OS=y
+CONFIG_MCUMGR_GRP_STAT=y
+CONFIG_MCUMGR_TRANSPORT_BT=y
+
+# -----------------------------------------------------------------
+# 
+# -----------------------------------------------------------------
+# Do NOT close the access port automatically -- Need to remove these for production environments
+CONFIG_NRF_APPROTECT_LOCK=n
+CONFIG_NRF_SECURE_APPROTECT_LOCK=n            # for the Secure domain
+CONFIG_NRF_APPROTECT_USER_HANDLING=y
+CONFIG_NRF_APPROTECT_USE_UICR=y
+
+
+
+
+# ADC configuration
+CONFIG_ADC=y
+CONFIG_ADC_NRFX_SAADC=y
+
+# Optional: For battery monitoring thread
+CONFIG_THREAD_STACK_INFO=y
